# Probabilistic-Bayesian-LangGraph-API

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
examples/: benchmark_demo.py  normal_rag_demo.py  pathological_rag_demo.py  python_usage.py  smoke_test.py  statistical_benchmark.py
src/b_langgraph/: __init__.py
src/b_langgraph/inference/: smc.py  utils.py
src/b_langgraph/model/: priors.py
src/b_langgraph/runtime/: agent.py  interfaces.py
src/b_langgraph/scenarios/: registry.py
src/b_langgraph/tools/: mock_tools.py
src/bayesian_prob_langgraph_api/api/: app.py
tests/: test_api.py  test_core.py
