[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-prob-langgraph-api"
version = "0.1.1"
description = "Bayesian and probabilistic LangGraph-style orchestration API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Angshul Majumdar"}]
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "langgraph>=0.2,<1.0",
  "langchain-core>=0.3,<1.0",
  "pandas>=2.0,<3.0"
]

[project.urls]
Homepage = "https://github.com/AngshulMajumdar/Bayesian-Probabilistic-LangGraph"
Repository = "https://github.com/AngshulMajumdar/Bayesian-Probabilistic-LangGraph"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
